# TeaMonitorFusion

./: .gitignore  CMakeLists.txt  README.md  build_and_run.bat  发布包说明.md  启动茶叶监测系统.vbs
src/: app_icon.rc  launcherwindow.cpp  launcherwindow.h  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc
src/models/: devicedefinitions.h
src/services/: abstractcameraservice.h  abstractspectrometerservice.h  ebuscameraservice.cpp  ebuscameraservice.h  mockcameraservice.cpp  mockcameraservice.h  mockspectrometerservice.cpp  mockspectrometerservice.h  oceandirectspectrometerservice.cpp  oceandirectspectrometerservice.h  seaspectrometerservice.cpp  seaspectrometerservice.h
src/ui/: apptheme.h
src/widgets/: spectrumchartwidget.cpp  spectrumchartwidget.h
